[gd_scene load_steps=51 format=2]

[ext_resource path="res://Assets/grass.png" type="Texture" id=1]
[ext_resource path="res://TileMap.gd" type="Script" id=2]
[ext_resource path="res://Tile/Tile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Moving.gd" type="Script" id=4]
[ext_resource path="res://UnitMap.gd" type="Script" id=5]
[ext_resource path="res://StructureMap.gd" type="Script" id=6]
[ext_resource path="res://Assets/cityGrayscale.png" type="Texture" id=7]
[ext_resource path="res://Assets/p1Unit.png" type="Texture" id=8]
[ext_resource path="res://Unit/Unit.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cursor/Cursor.tscn" type="PackedScene" id=10]
[ext_resource path="res://SFXChannel.gd" type="Script" id=11]
[ext_resource path="res://Assets/song106.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/song101.wav" type="AudioStream" id=13]
[ext_resource path="res://RouteMap.gd" type="Script" id=14]
[ext_resource path="res://Assets/route.png" type="Texture" id=15]
[ext_resource path="res://UI.gd" type="Script" id=16]
[ext_resource path="res://Engine.gd" type="Script" id=17]
[ext_resource path="res://Idle.gd" type="Script" id=18]
[ext_resource path="res://Movement.gd" type="Script" id=19]
[ext_resource path="res://Combat.gd" type="Script" id=20]
[ext_resource path="res://VBoxContainer.gd" type="Script" id=21]
[ext_resource path="res://MenuButton.gd" type="Script" id=22]
[ext_resource path="res://referee.tscn" type="PackedScene" id=23]
[ext_resource path="res://Assets/p2Unit.png" type="Texture" id=24]
[ext_resource path="res://Assets/cityp1.png" type="Texture" id=25]
[ext_resource path="res://Assets/cityp2.png" type="Texture" id=26]
[ext_resource path="res://Assets/factoryGrayscale.png" type="Texture" id=27]
[ext_resource path="res://Assets/hqp1.png" type="Texture" id=28]
[ext_resource path="res://Assets/factoryp2.png" type="Texture" id=29]
[ext_resource path="res://Assets/hq.png" type="Texture" id=30]
[ext_resource path="res://Assets/hqp2.png" type="Texture" id=31]
[ext_resource path="res://Assets/factoryp1.png" type="Texture" id=32]
[ext_resource path="res://Assets/explosion.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/Infection.mp3" type="AudioStream" id=34]
[ext_resource path="res://Assets/Cyberninja.mp3" type="AudioStream" id=35]
[ext_resource path="res://Assets/antiairp1.png" type="Texture" id=36]
[ext_resource path="res://Assets/tankp1.png" type="Texture" id=37]
[ext_resource path="res://Assets/tankP2.png" type="Texture" id=38]
[ext_resource path="res://Assets/antiairp2.png" type="Texture" id=39]
[ext_resource path="res://Assets/bcopterp2.png" type="Texture" id=40]
[ext_resource path="res://Assets/bcopterp1.png" type="Texture" id=41]
[ext_resource path="res://Database/objects/UnitStats/Infantry.tres" type="Resource" id=42]
[ext_resource path="res://Database/objects/UnitStats/Bcopter.tres" type="Resource" id=43]
[ext_resource path="res://Database/objects/UnitStats/Tank.tres" type="Resource" id=44]
[ext_resource path="res://Database/objects/UnitStats/Antiair.tres" type="Resource" id=45]
[ext_resource path="res://BeginTurn.gd" type="Script" id=46]

[sub_resource type="TileSet" id=1]
0/name = "grass.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "cityNeutral"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "cityP1"
1/texture = ExtResource( 25 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "cityP2"
2/texture = ExtResource( 26 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "factoryNeutral"
3/texture = ExtResource( 27 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "factoryP1"
4/texture = ExtResource( 32 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "factoryP2"
5/texture = ExtResource( 29 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "hqNeutral"
6/texture = ExtResource( 30 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "hqP1"
7/texture = ExtResource( 28 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "hqP2"
8/texture = ExtResource( 31 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "route.png 0"
0/texture = ExtResource( 15 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "route.png 1"
1/texture = ExtResource( 15 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 64, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "route.png 2"
2/texture = ExtResource( 15 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 96, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "route.png 3"
3/texture = ExtResource( 15 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 96, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "route.png 4"
4/texture = ExtResource( 15 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 96, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "route.png 5"
5/texture = ExtResource( 15 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "route.png 6"
6/texture = ExtResource( 15 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 32, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "route.png 7"
7/texture = ExtResource( 15 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 96, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "route.png 8"
8/texture = ExtResource( 15 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 32, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "route.png 9"
9/texture = ExtResource( 15 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 64, 64, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "route.png 10"
10/texture = ExtResource( 15 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 32, 64, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "route.png 11"
11/texture = ExtResource( 15 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 64, 32, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "route.png 12"
12/texture = ExtResource( 15 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 96, 32, 32, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "route.png 13"
13/texture = ExtResource( 15 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 32, 32, 32, 32 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "route.png 14"
14/texture = ExtResource( 15 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 64, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0

[sub_resource type="TileSet" id=4]
2/name = "p1-Infantry"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "p2-Infantry"
3/texture = ExtResource( 24 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "p1-Antiair"
4/texture = ExtResource( 36 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "p2-Antiair"
5/texture = ExtResource( 39 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "p1-Bcopter"
6/texture = ExtResource( 41 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "p2-Bcopter"
7/texture = ExtResource( 40 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "p1-Tank"
8/texture = ExtResource( 37 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "p2-Tank"
9/texture = ExtResource( 38 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[node name="MapScene" type="Node2D"]

[node name="GameplayLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Engine" type="Node" parent="GameplayLayer"]
script = ExtResource( 17 )

[node name="TileMap" type="TileMap" parent="GameplayLayer/Engine"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0 )
script = ExtResource( 2 )
tileScene = ExtResource( 3 )

[node name="Cursor" parent="GameplayLayer/Engine/TileMap" instance=ExtResource( 10 )]

[node name="StructureMap" type="TileMap" parent="GameplayLayer/Engine"]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65538, 1, 0, 65549, 2, 0, 131078, 3, 0, 196609, 4, 0, 196622, 5, 0, 262151, 0, 0, 262152, 0, 0, 327681, 7, 0, 327687, 0, 0, 327688, 0, 0, 327694, 8, 0, 458753, 4, 0, 458760, 3, 0, 458766, 5, 0, 589826, 1, 0, 589837, 2, 0 )
script = ExtResource( 6 )

[node name="RouteMap" type="TileMap" parent="GameplayLayer/Engine"]
z_index = 2
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 14 )

[node name="UnitMap" type="TileMap" parent="GameplayLayer/Engine"]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 5 )
unitScene = ExtResource( 9 )

[node name="States" type="Node" parent="GameplayLayer/Engine"]

[node name="BeginTurn" type="Node" parent="GameplayLayer/Engine/States"]
script = ExtResource( 46 )

[node name="Idle" type="Node" parent="GameplayLayer/Engine/States"]
script = ExtResource( 18 )

[node name="Movement" type="Node" parent="GameplayLayer/Engine/States"]
script = ExtResource( 19 )

[node name="Moving" type="Node" parent="GameplayLayer/Engine/States"]
script = ExtResource( 4 )

[node name="Combat" type="Node" parent="GameplayLayer/Engine/States"]
script = ExtResource( 20 )

[node name="Referee" parent="GameplayLayer/Engine" instance=ExtResource( 23 )]
unitScene = ExtResource( 9 )
tankStats = ExtResource( 44 )
copterStats = ExtResource( 43 )
antiairStats = ExtResource( 45 )
infantryStats = ExtResource( 42 )

[node name="AudioSystem" type="Node" parent="GameplayLayer/Engine"]
script = ExtResource( 11 )
cursorMove = ExtResource( 12 )
accept = ExtResource( 13 )
explosion = ExtResource( 33 )
player1BGM = ExtResource( 34 )
player2BGM = ExtResource( 35 )

[node name="SFX" type="Node" parent="GameplayLayer/Engine/AudioSystem"]

[node name="SFXChannel" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/SFX"]

[node name="SFXChannel2" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/SFX"]

[node name="SFXChannel3" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/SFX"]

[node name="SFXChannel4" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/SFX"]

[node name="SFXChannel5" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/SFX"]

[node name="SFXChannel6" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/SFX"]

[node name="SFXChannel7" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/SFX"]

[node name="SFXChannel8" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/SFX"]

[node name="BGM" type="Node" parent="GameplayLayer/Engine/AudioSystem"]

[node name="BGMChannel" type="AudioStreamPlayer" parent="GameplayLayer/Engine/AudioSystem/BGM"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
margin_right = 510.0
margin_bottom = 384.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="UILayer/UI"]
margin_right = 25.0
margin_bottom = 126.66
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}
buttonScript = ExtResource( 22 )

[node name="PlayerInfo" type="VBoxContainer" parent="UILayer/UI"]
margin_left = 15.0
margin_top = 12.0
margin_right = 124.0
margin_bottom = 52.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="UILayer/UI/PlayerInfo"]
margin_right = 109.0
margin_bottom = 14.0
text = "Player1's turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="UILayer/UI/PlayerInfo"]
margin_top = 18.0
margin_right = 109.0
margin_bottom = 32.0
text = "Money: 100000G"

[node name="BeginTurn" type="VBoxContainer" parent="UILayer/UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = -25.0
margin_right = 75.5
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="UILayer/UI/BeginTurn"]
margin_right = 151.0
margin_bottom = 14.0
text = "Begin Player1's turn "
align = 1

[node name="Income" type="Label" parent="UILayer/UI/BeginTurn"]
margin_top = 18.0
margin_right = 151.0
margin_bottom = 32.0
text = "+10000 G"
align = 1

[node name="Instruction" type="Label" parent="UILayer/UI/BeginTurn"]
margin_top = 36.0
margin_right = 151.0
margin_bottom = 50.0
text = "Click on center to begin"
align = 1

[connection signal="allTilesCreated" from="GameplayLayer/Engine/TileMap" to="GameplayLayer/Engine/TileMap" method="_on_TileMap_allTilesCreated"]
[connection signal="switchedTileHighlight" from="GameplayLayer/Engine/TileMap" to="GameplayLayer/Engine/TileMap" method="_on_TileMap_switchedTileHighlight"]
[connection signal="tileCreated" from="GameplayLayer/Engine/TileMap" to="GameplayLayer/Engine/TileMap" method="_on_TileMap_tileCreated"]
[connection signal="sendCellData" from="GameplayLayer/Engine/States/Idle" to="GameplayLayer/Engine/States/Movement" method="_on_Idle_sendCellData"]
[connection signal="resetMovement" from="GameplayLayer/Engine/States/Moving" to="GameplayLayer/Engine/States/Movement" method="_on_Moving_resetMovement"]
[connection signal="requestUnit" from="GameplayLayer/Engine/States/Combat" to="GameplayLayer/Engine/States/Movement" method="_on_Combat_requestUnit"]
[connection signal="resetMovement" from="GameplayLayer/Engine/States/Combat" to="GameplayLayer/Engine/States/Moving" method="selectedCancel"]
[connection signal="sendUnit" from="GameplayLayer/Engine/Referee" to="GameplayLayer/Engine/TileMap" method="unitSpawned"]
[connection signal="gui_input" from="UILayer/UI/BeginTurn" to="UILayer/UI" method="_on_BeginTurn_gui_input"]
